--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
   <h1>Заголовок страницы</h1>
   <p>Основной текст.</p>
+  <ol>
+    <li>Элемент 1</li>
+    <li>Элемент 2</li>
+    <li>Элемент 3</li>
+  </ol>
 
  </body>
 </html>
