--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <h1>Заголовок страницы</h1>
   <p>Основной текст.</p>
   <ol>
-    <li>Элемент 1</li>
-    <li>Элемент 2</li>
-    <li>Элемент 3</li>
+    <li><p>Элемент 1</p></li>
+    <li><p>Элемент 1</p></li>
+    <li><p>Элемент 1</p></li>
   </ol>
 
  </body>
