--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
  <body>
 
   <h1>Заголовок страницы</h1>
+  <h2>Заголовок 2</h2>
   <p>Основной текст.</p>
   <ol>
-    <li><p>Элемент 1</p></li>
-    <li><p>Элемент 1</p></li>
-    <li><p>Элемент 1</p></li>
+    <li><p>Номер 1</p></li>
+    <ul>
+      <li><p>Номер 11</p></li>
+      <li><p>Номер 12</p></li>
+    </ul>
+    <li><p>Номер 2</p></li>
+    <li><p>Номер 3</p></li>
+    <li><p>Номер 4</p></li>
   </ol>
 
  </body>
