--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <h2>Заголовок 2</h2>
   <p>Основной текст.</p>
   <ol>
-    <li><p>Номер 1</p></li>
+    <li><p>Номер 1</p>
     <ul>
       <li><p>Номер 11</p></li>
       <li><p>Номер 12</p></li>
-    </ul>
+    </ul></li>
     <li><p>Номер 2</p></li>
     <li><p>Номер 3</p></li>
     <li><p>Номер 4</p></li>
