--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
   <title>Моя 1st веб-страница!</title>
  </head>
  <body>
-
+  <table>
+    <tr>
+      <td>0</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>3</td>
+    </tr>
+  </table>
   <h1>Заголовок страницы</h1>
   <h2>Заголовок 2</h2>
   <p>Основной текст.</p>
