--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <li><p>Номер 4</p></li>
   </ol>
   <p>
-    <a href = https://github.com/NopeTheGod/The-Best-Freaking-Project>Сайт Михаила</a>
+    <a href = "https://github.com/NopeTheGod/The-Best-Freaking-Project">Сайт Михаила</a>
   </p>
  </body>
 </html>
