--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   </ol>
   <p>
     <a href = "https://github.com/NopeTheGod/The-Best-Freaking-Project">Сайт Михаила</a>
+    <a href = "https://github.com/tiawseo/1st">Сайт Татьяны</a>
   </p>
  </body>
 </html>
