--- a/index.html
+++ b/index.html
@@ -3,31 +3,15 @@
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Моя 1st веб-страница!</title>
+  <title>Сайты 10 класса, моя коллекция</title>
  </head>
  <body>
-  <table>
-    <tr>
-      <td><p>0</p></td>
-      <td><p>1</p></td>
-    </tr>
-    <tr>
-      <td><p>2</p></td>
-      <td><p>3</p></td>
-    </tr>
-  </table>
-  <h1>Заголовок страницы</h1>
-  <h2>Заголовок 2</h2>
-  <p>Основной текст.</p>
+  
+  <h1>Сайты 10 класса</h1>
+  <p>*(список может быть не полным, сайт ещё в работе)</p>
   <ol>
-    <li><p>Номер 1</p>
-    <ul>
-      <li><p>Номер 11</p></li>
-      <li><p>Номер 12</p></li>
-    </ul></li>
-    <li><p>Номер 2</p></li>
-    <li><p>Номер 3</p></li>
-    <li><p>Номер 4</p></li>
+    <li><p><a href = "">Сайт Михаила</a></p></li>
+    <li><p><a href = "">Сайт Татьяны</a></p></li>
   </ol>
   <p>
     <a href = "https://github.com/NopeTheGod/The-Best-Freaking-Project">Сайт Михаила</a>
