--- a/KM.html
+++ b/KM.html
@@ -4,10 +4,9 @@
   <title>Сайт Михаила</title>
  </head>
  <body>
-  
   <h1>Сайт Михаила</h1>
   <p>
-    <a href = "https://github.com/NopeTheGod/The-Best-Freaking-Project">Сайт Михаила</a>
+    <a href = "https://github.com/NopeTheGod/The-Best-Freaking-Project">Репозиторий Михаила</a>
   </p>
  </body>
 </html>
