--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Сайты 10 класса</h1>
   <p>*(список может быть не полным, сайт ещё в работе)</p>
   <ol>
-    <li><p><a href = "">Сайт Михаила</a></p></li>
+    <li><p><a href = "KM.html">Сайт Михаила</a></p></li>
     <li><p><a href = "">Сайт Татьяны</a></p></li>
   </ol>
   <p>
