--- a/YT.html
+++ b/YT.html
@@ -6,6 +6,9 @@
  <body>
   <h1>Сайт Татьяны</h1>
   <p>
+    <a href = "https://tiawseo.github.io/1st/">Сайт Тут</a>
+  </p>
+  <p>
     <a href = "https://github.com/tiawseo/1st">Репозиторий Татьяны</a>
   </p>
  </body>
