Add back navigation link to KM.html

--- a/KM.html
+++ b/KM.html
@@ -4,6 +4,9 @@
   <title>Сайт Михаила</title>
  </head>
  <body>
+  <p>
+    <a href = "index.html">Назад</a>
+  </p>
   <h1>Сайт Михаила</h1>
   <p>
     <a href = "https://nopethegod.github.io/The-Best-Freaking-Project/">Сайт Тут</a>
