--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link rel="stylesheet" href="style.css">
   <title>Сайты 10 класса, моя коллекция</title>
  </head>
  <body>
   
   <h1>Сайты 10 класса</h1>
-  <p>*(список может быть не полным, сайт ещё в работе)</p>
+  <small>*(список может быть не полным, сайт ещё в работе)</small>
   <ol>
     <li><p><a href = "KM.html">Сайт Михаила</a></p></li>
     <li><p><a href = "YT.html">Сайт Татьяны</a></p></li>
