Wrap header in a div for better structure

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <title>Сайты 10 класса, моя коллекция</title>
  </head>
  <body>
-  
-  <h1>Сайты 10 класса</h1>
-  <small>*(список может быть не полным, сайт ещё в работе)</small>
+  <div class="block">
+    <h1>Сайты 10 класса</h1>
+    <small>*(список может быть не полным, сайт ещё в работе)</small>
+  </div>
   <ol>
     <li><p><a href = "KM.html">Сайт Михаила</a></p></li>
     <li><p><a href = "YT.html">Сайт Татьяны</a></p></li>
