--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Сайты 10 класса, моя коллекция</title>
  </head>
  <body>
-  <div class="block">
+  <div class="block" hight = 60>
     <h1>Сайты 10 класса</h1>
     <small>*(список может быть не полным, сайт ещё в работе)</small>
   </div>
