Change small tag to smallBlock in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <body>
   <div class="block" height = "100">
     <h1>Сайты 10 класса</h1>
-    <small>*(список может быть не полным, сайт ещё в работе)</small>
+    <smallBlock>*(список может быть не полным, сайт ещё в работе)</smallBlock>
   </div>
   <ol>
     <li><p><a href = "KM.html">Сайт Михаила</a></p></li>
