--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Сайты 10 класса, моя коллекция</title>
  </head>
  <body>
-  <div class="block" height = "100">
+  <div class="block">
     <h1>Сайты 10 класса</h1>
     <smallBlock>*(список может быть не полным, сайт ещё в работе)</smallBlock>
   </div>
