Add back link to index.html in YT.html

--- a/YT.html
+++ b/YT.html
@@ -4,6 +4,9 @@
   <title>Сайт Татьяны</title>
  </head>
  <body>
+  <p>
+    <a href = "index.html">Назад</a>
+  </p>
   <h1>Сайт Татьяны</h1>
   <p>
     <a href = "https://tiawseo.github.io/1st/">Сайт Тут</a>
