--- a/KM.html
+++ b/KM.html
@@ -1,13 +1,16 @@
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link rel="stylesheet" href="style.css">
   <title>Сайт Михаила</title>
  </head>
  <body>
   <p>
     <a href = "index.html">Назад</a>
   </p>
-  <h1>Сайт Михаила</h1>
+  <div class="block">
+    <h1>Сайт Михаила</h1>
+  </div>
   <p>
     <a href = "https://nopethegod.github.io/The-Best-Freaking-Project/">Сайт Тут</a>
   </p>
