Replace paragraph with small tag for navigation

--- a/KM.html
+++ b/KM.html
@@ -5,9 +5,9 @@
   <title>Сайт Михаила</title>
  </head>
  <body>
-  <p>
+  <small>
     <a href = "index.html">Назад</a>
-  </p>
+  </small>
   <div class="block">
     <h1>Сайт Михаила</h1>
   </div>
