Refactor HTML structure and add stylesheet link

--- a/YT.html
+++ b/YT.html
@@ -1,13 +1,16 @@
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" href="style.css">
   <title>Сайт Татьяны</title>
  </head>
  <body>
-  <p>
+  <small>
     <a href = "index.html">Назад</a>
-  </p>
-  <h1>Сайт Татьяны</h1>
+  </small>
+  <div class="block">
+   <h1>Сайт Татьяны</h1>
+  </div>
   <p>
     <a href = "https://tiawseo.github.io/1st/">Сайт Тут</a>
   </p>
