--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <ol>
     <li><p><a href = "KM.html">Сайт Михаила</a></p></li>
     <li><p><a href = "YT.html">Сайт Татьяны</a></p></li>
+    <li><p><a href = "https://github.com/smallpotato00000/01.12.2025">Чей-то репозиторий</a></p></li>
   </ol>
  </body>
 </html>
