--- a/KM.html
+++ b/KM.html
@@ -17,5 +17,8 @@
   <p>
     <a href = "https://github.com/NopeTheGod/The-Best-Freaking-Project">Репозиторий Михаила</a>
   </p>
+  <div class="blockImg">
+   <img src="imgs/KMkt.jpg" alt="Фото Кости с макияжем">
+  </div>
  </body>
 </html>
