--- a/KM.html
+++ b/KM.html
@@ -18,7 +18,7 @@
     <a href = "https://github.com/NopeTheGod/The-Best-Freaking-Project">Репозиторий Михаила</a>
   </p>
   <div class="blockImg">
-   <img src="imgs/KMkt.jpg" alt="Фото Кости с макияжем">
+   <img src="imgs/KMkt.jpg" width="50%" alt="Фото Кости с макияжем">
   </div>
  </body>
 </html>
