--- a/KM.html
+++ b/KM.html
@@ -17,8 +17,16 @@
   <p>
     <a href = "https://github.com/NopeTheGod/The-Best-Freaking-Project">Репозиторий Михаила</a>
   </p>
+  <h2>Тематика сайта Михаила, Who is Kostya Trener?</h2>
+  <p>Сайт посвящён некому "Косте Тренеру", настоящее имя не упомянуто.</p>
+  <h2>Наполнение сайта Михаила</h2>
+  <p>Текст на сайте на английском языке. На нём расположен список характеристик Тренера, в нём указано, что он лучший игрок в компьютерную игру "Dota2". Далее на сайте отдельно идёт список хороших качеств Кости.</p>
+  <h2>Фото Кости Тренера с сайта михаила</h2>
   <div class="blockImg">
-   <img src="imgs/KMkt.jpg" width="50%" alt="Фото Кости с макияжем">
+   <img src="imgs/KMkt.jpg" width="50%" higth="50%" alt="Фото Кости с макияжем">
   </div>
+  <p>На сайте Михаила есть ссылка на дополнительные фото Кости Тренера: <a href = "https://news.rr.nihalnavath.com/posts/Kostya-Treners-nudes-79573464">вот она</a>.</p>
+  <h2>Семья Кости Тренера</h2>
+  <p>На сайте планируется добавление отдельной страницы для описания семьи Кости Тренера, но к сожалению, на 20.12 эта страница ещё не добавлена.</p>
  </body>
 </html>
