--- a/KM.html
+++ b/KM.html
@@ -20,7 +20,8 @@
   <h2>Тематика сайта Михаила, Who is Kostya Trener?</h2>
   <p>Сайт посвящён некому "Косте Тренеру", настоящее имя не упомянуто.</p>
   <h2>Наполнение сайта Михаила</h2>
-  <p>Текст на сайте на английском языке. На нём расположен список характеристик Тренера, в нём указано, что он лучший игрок в компьютерную игру "Dota2". Далее на сайте отдельно идёт список хороших качеств Кости.</p>
+  <p>Текст на сайте на английском языке. На нём расположен список характеристик Тренера, в нём указано, что он лучший игрок в компьютерную игру "Dota2". 
+  Далее на сайте отдельно идёт список хороших качеств Кости.</p>
   <h2>Фото Кости Тренера с сайта михаила</h2>
   <div class="blockImg">
    <img src="imgs/KMkt.jpg" width="50%" higth="50%" alt="Фото Кости с макияжем">
