--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <ol>
     <li><p><a href = "KM.html">Сайт Михаила</a></p></li>
     <li><p><a href = "YT.html">Сайт Татьяны</a></p></li>
-    <li><p><a href = "https://github.com/smallpotato00000">Чей-то GitHub (и там сайт про MBTI)</a></p></li>
+    <li><p><a href = "https://github.com/smallpotato00000">Чей-то GitHub (и там сайт по MBTI)</a></p></li>
   </ol>
  </body>
 </html>
