Update description of Kostya Trener

--- a/KM.html
+++ b/KM.html
@@ -18,7 +18,7 @@
     <a href = "https://github.com/NopeTheGod/The-Best-Freaking-Project">Репозиторий Михаила</a>
   </p>
   <h2>Тематика сайта Михаила, Who is Kostya Trener?</h2>
-  <p>Сайт посвящён некому "Косте Тренеру", настоящее имя не упомянуто.</p>
+  <p>Сайт посвящён некому "Косте Тренеру", иное имя не упомянуто.</p>
   <h2>Наполнение сайта Михаила</h2>
   <p>Текст на сайте на английском языке. На нём расположен список характеристик Тренера, в нём указано, что он лучший игрок в компьютерную игру "Dota2". <br>
   Далее на сайте отдельно идёт список хороших качеств Кости.</p>
