Correct header capitalization for Кости Тренера

--- a/KM.html
+++ b/KM.html
@@ -22,7 +22,7 @@
   <h2>Наполнение сайта Михаила</h2>
   <p>Текст на сайте на английском языке. На нём расположен список характеристик Тренера, в нём указано, что он лучший игрок в компьютерную игру "Dota2". <br>
   Далее на сайте отдельно идёт список хороших качеств Кости.</p>
-  <h2>Фото Кости Тренера с сайта михаила</h2>
+  <h2>Фото Кости Тренера с сайта Михаила</h2>
   <div class="blockImg">
    <img src="imgs/KMkt.jpg" width="50%" higth="50%" alt="Фото Кости с макияжем">
   </div>
