--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>Сайты 10 класса, моя коллекция</title>
+  <title>Сайты <b>10</b> класса, моя коллекция</title>
  </head>
  <body>
   <div class="block">
-    <h1>Сайты 10 класса</h1>
+    <h1>Сайты <b>10</b> класса</h1>
     <smallBlock>*(список может быть не полным, сайт ещё в работе)</smallBlock>
   </div>
   <ol>
