--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>Сайты <b>10</b> класса, моя коллекция</title>
+  <title>Сайты 10 класса, моя коллекция</title>
  </head>
  <body>
   <div class="block">
