--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  </head>
  <body>
   <div class="block">
-    <h1>Сайты <b>10</b> класса</h1>
+    <h1>Сайты 10 класса</h1>
     <smallBlock>*(список может быть не полным, сайт ещё в работе)</smallBlock>
   </div>
   <ol>
