--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   </div>
   <ol>
     <li><p><a href = "KM.html">Сайт Михаила</a></p></li>
+    <li><p><a href = "KK.html">Сайт Константина</a></p></li>
     <li><p><a href = "YT.html">Сайт Татьяны</a></p></li>
-    <li><p><a href = "https://github.com/smallpotato00000">Чей-то GitHub (и там сайт по MBTI)</a></p></li>
+    <li><p><a href = "BA.html">Сайт Александры Б.</a></p></li>
   </ol>
  </body>
 </html>
