--- a/BA.html
+++ b/BA.html
@@ -17,6 +17,6 @@
   <p>
     <a href = "https://github.com/smallpotato00000/MBTI">Репозиторий Александры Б.</a>
   </p>
-  <p>Сайт сделан прекрасно, К тексту прменена очень красвая анмация появления. К сожалению, смысловая составляющая мне, пока, не очень понятна, но я верю, что в будующем сайт притерпт много позтивных изменений. Основная тематика - типы личности MBTI.</p>
+  <p>Сайт сделан прекрасно, к тексту прменена очень красвая анмация появления. К сожалению, смысловая составляющая мне, пока, не очень понятна, но я верю, что в будующем сайт притерпт много позтивных изменений. Основная тематика - типы личности MBTI.</p>
  </body>
 </html>
