--- a/YT.html
+++ b/YT.html
@@ -17,5 +17,8 @@
   <p>
     <a href = "https://github.com/tiawseo/1st">Репозиторий Татьяны</a>
   </p>
+  <p>
+   Главная страница оформлена как таблица с названиями сладостей: чизкейк, брауни и ромовая баба. Из таблицы есть кликаемая ссылка на отдельную страницу с рецептом чизкейка.
+  </p>
  </body>
 </html>
