Update description of MBTI types on BA.html

--- a/BA.html
+++ b/BA.html
@@ -17,7 +17,7 @@
   <p>
     <a href = "https://github.com/smallpotato00000/MBTI">Репозиторий Александры Б.</a>
   </p>
-  <p>На странице перечислены все 16 типов личности MBTI (INTP, INFP, INFJ, ISFJ, ISTJ, ISTP, ISFP, INTJ, а ниже ENTP, ENFP, ENFJ, ESFJ, ESTJ, ESTP, ESFP, ENTJ), каждый как отдельный пункт списка. Страница сейчас выглядит как черновой вариант: есть только текстовые пункты без описаний типов и без переходов по ссылкам, то есть структура уже задана, но содержимое ещё не заполнено.
+  <p>На странице перечислены все 16 типов личности MBTI (INTP, INFP, INFJ, ISFJ, ISTJ, ISTP, ISFP, INTJ, а ниже ENTP, ENFP, ENFJ, ESFJ, ESTJ, ESTP, ESFP, ENTJ), каждый как отдельный пункт списка. Там есть только текстовые пункты без описаний типов и без переходов по ссылкам, то есть структура уже задана, но содержимое ещё не заполнено.
 </p>
  </body>
 </html>
